# spawn

./: .dockerignore  .env  .formatter.exs  .gitignore  .tool-versions  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile-activator-api  Dockerfile-activator-cli  Dockerfile-activator-grpc  Dockerfile-activator-http  Dockerfile-activator-kafka  Dockerfile-activator-pubsub  Dockerfile-activator-rabbitmq  Dockerfile-activator-simple  Dockerfile-activator-sqs  Dockerfile-activators  Dockerfile-elixir-example  Dockerfile-initializer  Dockerfile-operator  Dockerfile-operator-bkp  Dockerfile-proxy  Dockerfile.proxy  Makefile  README.md  _config.bkp  _config.yml  compile-pb.sh  docker-compose.yaml  kind-cluster-config.yaml  mix.exs  proxy-entrypoint  proxy-entrypoint.sh
.github/: dependabot.yaml
config/: config.exs  dev.exs  otel-collector-config.yaml  prod.exs  runtime.exs  test.exs
docs/: activators.md  actors.md  architecture.md  cli.md  conceptual.md  contribution_guide.md  crds.md  developer_guide.md  durable.md  features.md  getting_started.md  history.md  index.md  install.md  local_development.md  main.md  miscellaneous.md  modeling_with_actors.md  observability.md  operator_manual.md  overview.md  phoenix.md  projections.md  protocol.md  sdks.md  statestore.md  statestores.md
lib/: actors.ex  sidecar.ex  spawn.ex
priv/: internal_versions.exs
rel/: vm.args.eex
spawn-cli/: Cargo.toml
spawn-cli/cli/: Cargo.toml
spawn-cli/cli/src/: main.rs
spawn-cli/cli/src/api/: install.rs
spawn_cli/: README.md  mix.exs
spawn_monitor/: mix.exs  (+2 more)
(+1258 files in other folders)
