[package]
name = "spawn-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spawn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
anyhow = "1.0.68"
log = "0.4.0"
env_logger = "0.10"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }